Transfer chat logic to other app